add jeremy kaggle nb

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ fastai2_huggingface_nlp/.ipynb_checkpoints
 fastai2_huggingface_nlp/fastai2
 fastai2_huggingface_nlp/tmp
 fastai2_huggingface_nlp/models
+fastai2_huggingface_nlp/outputs
 
 s5/__pycache__/
 s5/results/
